--- a/qa_shellnouns_main/src/prolific_stats.ipynb
+++ b/qa_shellnouns_main/src/prolific_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "responses = pd.read_json(\"../data/raw_answers.json\").T.set_index(\"prolificId\")\n",
     "prolific_data = pd.read_csv(\n",
-    "    \"../data/prolific_stats.csv\", index_col=\"Participant id\"\n",
+    "    \"../data/prolific/prolific_stats.csv\", index_col=\"Participant id\"\n",
     ").rename_axis(\"prolificId\")\n",
     "\n",
     "df = prolific_data.join(responses, how=\"inner\")\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "Name: Time taken, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
