--- a/qa_shellnouns_main/compute_bertscores.ipynb
+++ b/qa_shellnouns_main/compute_bertscores.ipynb
@@ -205,11 +205,11 @@
     "\n",
     "# load datasets\n",
     "nyt = pd.read_csv(\n",
-    "    \"../data/gold_data_mapped.csv\",\n",
+    "    \"data/gold_data_mapped.csv\",\n",
     "    index_col=[\"batch\", \"file\"],\n",
     ")\n",
     "sta_df = pd.read_csv(\n",
-    "    \"../data/clean_answers.csv\",\n",
+    "    \"data/clean_answers.csv\",\n",
     "    index_col=[\"batch\", \"file\"],\n",
     ")\n",
     "\n",
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores_long.to_csv(\"../data/bert_scores_long_uncased.csv\")"
+    "scores_long.to_csv(\"data/bert_scores_long_uncased.csv\")"
    ]
   }
  ],
