--- a/qa_shellnouns_main/prolific_stats.ipynb
+++ b/qa_shellnouns_main/prolific_stats.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "responses = pd.read_json(\"../data/raw_answers.json\").T.set_index(\"prolificId\")\n",
+    "responses = pd.read_json(\"data/raw_answers.json\").T.set_index(\"prolificId\")\n",
     "prolific_data = pd.read_csv(\n",
-    "    \"../data/prolific/prolific_stats.csv\", index_col=\"Participant id\"\n",
+    "    \"data/prolific/prolific_stats.csv\", index_col=\"Participant id\"\n",
     ").rename_axis(\"prolificId\")\n",
     "\n",
     "df = prolific_data.join(responses, how=\"inner\")\n",
