--- a/qa_shellnouns_main/sta_analysis.ipynb
+++ b/qa_shellnouns_main/sta_analysis.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "nlp = spacy.load(\"en_core_web_trf\")\n",
     "\n",
-    "df = pd.read_csv(\"../data/clean_answers.csv\", index_col=\"batch\")\n",
+    "df = pd.read_csv(\"data/clean_answers.csv\", index_col=\"batch\")\n",
     "\n",
     "# preprocess data\n",
     "df[\"answer_raw\"] = df.answer\n",
