--- a/topic_reference_detection/evaluation.ipynb
+++ b/topic_reference_detection/evaluation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "fact       'Tatsache' stellt hier scheinbar die im letzte...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"../data/annotation/preprocessed.csv\", index_col=\"shellnoun\")\n",
+    "df = pd.read_csv(\"data/annotation/preprocessed.csv\", index_col=\"shellnoun\")\n",
     "\n",
     "# create column multi-index\n",
     "df.columns = pd.MultiIndex.from_tuples(\n",
