--- a/qa_shellnouns_main/compute_bertscores.ipynb
+++ b/qa_shellnouns_main/compute_bertscores.ipynb
@@ -12,33 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from bert_score import BERTScorer\n",
-    "import warnings\n",
-    "import logging\n",
-    "\n",
-    "# Suppress warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
-    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
-    "\n",
-    "scorer = BERTScorer(lang=\"en\", rescale_with_baseline=True)\n",
-    "\n",
-    "\n",
-    "def bertscore_(prediction: str, reference: str):\n",
-    "    return scorer.score([prediction], [reference])\n",
-    "\n",
-    "\n",
-    "bertscore = np.vectorize(bertscore_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,41 +74,8 @@
        "      <td>In the race for Westchester County executive, ...</td>\n",
        "      <td>Abortion rights</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">10</th>\n",
-       "      <th>10</th>\n",
-       "      <td>The researcher is currently following a large ...</td>\n",
-       "      <td>Trans fatty acids being added to some liquid v...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The researcher is currently following a large ...</td>\n",
-       "      <td>Man made fatty acids are used in food to incre...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The researcher is currently following a large ...</td>\n",
-       "      <td>Trans fatty acids are also added to some liqui...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The researcher is currently following a large ...</td>\n",
-       "      <td>The adding of trans fatty acids to liquid vege...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>The researcher is currently following a large ...</td>\n",
-       "      <td>Trans fatty acids are also added to some liqui...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19550 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -145,12 +86,6 @@
        "      1     In the race for Westchester County executive, ...   \n",
        "      1     In the race for Westchester County executive, ...   \n",
        "      1     In the race for Westchester County executive, ...   \n",
-       "...                                                       ...   \n",
-       "10    10    The researcher is currently following a large ...   \n",
-       "      10    The researcher is currently following a large ...   \n",
-       "      10    The researcher is currently following a large ...   \n",
-       "      10    The researcher is currently following a large ...   \n",
-       "      10    The researcher is currently following a large ...   \n",
        "\n",
        "                                                       answer  \n",
        "batch file                                                     \n",
@@ -158,15 +93,7 @@
        "      1     Mr Brodsky is criticizing Mr O'Rourke for not ...  \n",
        "      1     Aside from New York city, Westchester has the ...  \n",
        "      1                                        about abortion  \n",
-       "      1                                       Abortion rights  \n",
-       "...                                                       ...  \n",
-       "10    10    Trans fatty acids being added to some liquid v...  \n",
-       "      10    Man made fatty acids are used in food to incre...  \n",
-       "      10    Trans fatty acids are also added to some liqui...  \n",
-       "      10    The adding of trans fatty acids to liquid vege...  \n",
-       "      10    Trans fatty acids are also added to some liqui...  \n",
-       "\n",
-       "[19550 rows x 2 columns]"
+       "      1                                       Abortion rights  "
       ]
      },
      "execution_count": 2,
@@ -175,33 +102,12 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from mapping_util import long_to_wide, wide_to_long\n",
+    "\n",
+    "\n",
     "annotators = [\"A1\", \"A2\", \"A3\", \"A4\", \"A5\"]\n",
-    "\n",
-    "\n",
-    "def long_to_wide(frame, n, col_names=None):\n",
-    "    \"\"\"reshape long to wide format, transposing groups of n rows into columns\"\"\"\n",
-    "    base_index = pd.RangeIndex(len(frame)).to_series()\n",
-    "    group_level = base_index.floordiv(n)\n",
-    "    column_level = base_index.mod(n)\n",
-    "\n",
-    "    if col_names:\n",
-    "        assert (\n",
-    "            len(col_names) == len(set(col_names)) == n\n",
-    "        ), \"col_names must be unique and have the same length as n\"\n",
-    "        column_level = column_level.map(dict(enumerate(col_names)))\n",
-    "\n",
-    "    return (\n",
-    "        frame.set_index([group_level, column_level], append=True)\n",
-    "        .unstack()\n",
-    "        .droplevel(-1)\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def wide_to_long(frame):\n",
-    "    \"\"\"reshape the joined wide sentence-answer frame to long format\"\"\"\n",
-    "    frame_long = frame.set_index(\"sentence\", append=True).stack().rename(\"answer\")\n",
-    "    return frame_long.reset_index(2).droplevel(-1)\n",
-    "\n",
     "\n",
     "# load datasets\n",
     "nyt = pd.read_csv(\n",
@@ -219,7 +125,32 @@
     "df_long = wide_to_long(df)\n",
     "\n",
     "# inspect data\n",
-    "df_long"
+    "df_long.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bert_score import BERTScorer\n",
+    "import warnings\n",
+    "import logging\n",
+    "\n",
+    "\n",
+    "# Suppress warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
+    "\n",
+    "scorer = BERTScorer(lang=\"en\", rescale_with_baseline=True)\n",
+    "\n",
+    "\n",
+    "def bertscore_(prediction: str, reference: str):\n",
+    "    return scorer.score([prediction], [reference])\n",
+    "\n",
+    "\n",
+    "bertscore = np.vectorize(bertscore_)"
    ]
   },
   {
