--- a/qa_shellnouns_main/compute_rouge.ipynb
+++ b/qa_shellnouns_main/compute_rouge.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from mapping_util import long_to_wide\n",
+    "from mapping_util import long_to_wide, get_prediction\n",
     "\n",
     "annotators = [\"A1\", \"A2\", \"A3\", \"A4\", \"A5\"]\n",
     "variants = [\"rouge1\", \"rouge2\", \"rouge3\", \"rougeL\"]\n",
@@ -36,19 +36,23 @@
     "\n",
     "answers = long_to_wide(answers, 5, annotators).answer\n",
     "\n",
-    "df = nyt[[\"shellnoun\", \"sentence\"]].join(answers).set_index(\"shellnoun\", append=True)"
+    "df = (\n",
+    "    nyt[[\"shellnoun\", \"sentence\", \"is_sn_sent\"]]\n",
+    "    .join(answers)\n",
+    "    .set_index([\"shellnoun\", \"is_sn_sent\"], append=True)\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute ROUGE scores"
+    "#### Compute ROUGE scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,41 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from operator import attrgetter, itemgetter\n",
-    "\n",
-    "\n",
-    "def get_top_predictions(rouge_variant, measure):\n",
-    "    \"\"\"\n",
-    "    Get the top-voted sentence, preferring the sentence closest to\n",
-    "    (but preceding) the SN sentence in case of ties.\n",
-    "    \"\"\"\n",
-    "    frame = rouge_results.map(itemgetter(rouge_variant)).map(attrgetter(measure))\n",
-    "\n",
-    "    mapped_sents = frame.groupby(level=[0, 1]).apply(\n",
-    "        lambda f: f.droplevel((0, 1, -1)).idxmax()\n",
-    "    )\n",
-    "    top_sents = mapped_sents.mode(axis=1)\n",
-    "\n",
-    "    # create a mask that only includes sentences preceding the SN sentence\n",
-    "    m = top_sents.ge(\n",
-    "        nyt[nyt.is_sn_sent].index.get_level_values(\"sent_index\").values[:, None]\n",
-    "    )\n",
-    "\n",
-    "    # but always include the first column (in order to avoid empty rows)\n",
-    "    m[0] = False\n",
-    "\n",
-    "    prediction = top_sents.mask(m).ffill(axis=1)\n",
-    "\n",
-    "    return prediction.astype(int).iloc[:, -1]\n",
+    "from operator import itemgetter, attrgetter\n",
     "\n",
     "\n",
     "def evaluate_(rouge_variant, measure):\n",
     "    \"\"\"compute prediction accuracy\"\"\"\n",
-    "    prediction = get_top_predictions(rouge_variant, measure)\n",
+    "    scores = rouge_results.map(itemgetter(rouge_variant)).map(attrgetter(measure))\n",
+    "    prediction = get_prediction(scores)\n",
     "\n",
     "    return prediction.eq(gold.values).mean()\n",
     "\n",
@@ -120,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +166,7 @@
        "rougeL       0.58    0.65      0.66"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
